--- a/app/assets/css/large-style.css
+++ b/app/assets/css/large-style.css
@@ -48,11 +48,11 @@
 	opacity:.9;
 	color:antiquewhite;
 	margin-top:2.2em;
-	margin-left:9.5em;
+	margin-left:7.5em;
 	font-family: 'Ceviche One', cursive;
 	padding:.6em;
 	padding-bottom:1em;
-	width:35%;
+	width:45%;
 	box-shadow:5px 5px 3px 0px #212129;
 }
 
@@ -71,15 +71,15 @@
 }
 
 .jumbotron h4 {
-	width:34.5%;
-	margin-top:-2.35em;
-	margin-left:33.30em;
+	width:45%;
+	margin-top:-2.55em;
+	margin-left:26.30em;
 	border-radius:.3em;
 	background-color:antiquewhite;
 	opacity:.7;
 	color:#f0ad4e;
 	padding:.3em;
-	text-align:right;
+	text-align:center;
 	box-shadow:2.5px 2.5px 1.5px 0px #212120;
 }
 
