--- a/app/assets/css/smedium-style.css
+++ b/app/assets/css/smedium-style.css
@@ -163,3 +163,23 @@ img {
 	background-color:#212121;
 	padding-top:1.5rem;
 }
+
+.card {
+	background-color:antiquewhite;
+	opacity:.5;
+	border-radius:5px;
+}
+
+.card-title {
+	color:#f0ad4e;
+	background-color:#212129;
+	border-radius:5px;
+	padding:.20em;
+	line-height:3.5em;
+}
+
+.card-block p {
+	color:#000000;
+	line-height:1.5em;
+	padding:.20em;
+}
